style.css
/* ... */
.builder-section-panels .ui-state-default,
.builder-section-panels .ui-widget-content .ui-state-default,
.builder-section-panels .ui-widget-header .ui-state-default {
    border: 0;
	color: #171717;
    border-bottom: 2px solid #e4af32;
	background: #f2f3f4;
}

.builder-section-panels .ui-state-default a,
.builder-section-panels .ui-state-default a:link,
.builder-section-panels .ui-state-default a:visited {
	border: 0;
	color: #171717;
	text-decoration: none;
}

.builder-section-panels .ui-state-hover,
.builder-section-panels .ui-widget-content .ui-state-hover,
.builder-section-panels .ui-widget-header .ui-state-hover,
.builder-section-panels .ui-state-focus,
.builder-section-panels .ui-widget-content .ui-state-focus,
.builder-section-panels .ui-widget-header .ui-state-focus {
	border: 1px solid #;
	color: #f2f3f4;
	background: #29a6dd;
}

.builder-section-panels .ui-state-active a,
.builder-section-panels .ui-state-active a:link,
.builder-section-panels .ui-state-active a:visited {
	border: 0;
	color: #171717;
	text-decoration: none;
}


/* FIXME: This is a workaround due to a WP core issue */

body {
    background-color: #ffffff !important;
}

